--- a/src/BusinessLogic/Language/Translations/en.json
+++ b/src/BusinessLogic/Language/Translations/en.json
@@ -20,7 +20,7 @@
     "apiKeyIncorrect": "API key was incorrect.",
     "dontHaveAccount": "Don't have an account?",
     "welcome": "Welcome to Packlink PRO",
-    "connectYourService": "Connect your service using your key. You'll find it in the <strong>\"Packlink Pro API Key\"</strong> section of the <strong>\"Settings\"</strong>.",
+    "connectYourService": "Connect your service using your key. You'll find it in the <br><strong>\"Packlink Pro API Key\"</strong> section of the <strong>\"Settings\"</strong>.",
     "validateApiKey": "Validate API key",
     "chooseYourCountry": "Choose your country to start the registration process",
     "registerMe": "Register me"
