Fix layout for form elements and buttons
Issue: PLCR1801-10

--- a/src/BusinessLogic/Language/Translations/es.json
+++ b/src/BusinessLogic/Language/Translations/es.json
@@ -20,7 +20,7 @@
     "apiKeyIncorrect": "Clave de API incorrecta",
     "dontHaveAccount": "¿No tienes una cuenta?",
     "welcome": "Te damos la bienvenida a Packlink PRO",
-    "connectYourService": "Conecta tu servicio mediante tu clave. La encontrarás en la sección <br><strong>\"Configuración\"</strong> apartado <strong>\"Packlink Pro API Key\"<strong>",
+    "connectYourService": "Conecta tu servicio mediante tu clave. La encontrarás en la <br>sección <strong>\"Configuración\"</strong> apartado <strong>\"Packlink Pro API Key\"</strong>",
     "validateApiKey": "Validar API key",
     "chooseYourCountry": "Elige tu país para comenzar el registro",
     "registerMe": "Registrarme"
