--- a/src/BusinessLogic/Language/Translations/en.json
+++ b/src/BusinessLogic/Language/Translations/en.json
@@ -25,6 +25,36 @@
     "chooseYourCountry": "Choose your country to start the registration process",
     "registerMe": "Register me"
   },
+  "register": {
+    "logIn": "Log in",
+    "email": "Email",
+    "password": "Password",
+    "haveAccount": "Already have an account?",
+    "startEnjoying": "Start enjoying Packlink PRO!",
+    "registerAccount": "Register your account",
+    "getToKnowYou": "We would like to get to know you better in order to adapt to you and to send you an individual offer",
+    "monthlyShipmentVolume": "What is your monthly shipment volume?",
+    "phone": "Phone number",
+    "termsAndConditions": "I accept the <a href=\"%s\" target=\"_blank\">Terms of Service</a> and the <a href=\"%s\" target=\"_blank\">Privacy Policy</a> of Packlink",
+    "marketingEmails": "I authorise Packlink Shipping S.L. to send me commercial communications by e-mail",
+    "requiredField": "This field is required.",
+    "invalidEmail": "This field must be valid email.",
+    "shortPassword": "The password must be at least 6 characters long.",
+    "invalidPhone": "This field must be valid phone number.",
+    "submit": "Register",
+    "chooseYourCountry": "Choose your country",
+    "ES": "Spain",
+    "DE": "Germany",
+    "FR": "France",
+    "IT": "Italy",
+    "AT": "Austria",
+    "NL": "Netherlands",
+    "BE": "Belgium",
+    "PT": "Portugal",
+    "TR": "Turkey",
+    "IE": "Ireland",
+    "GB": "Great Britain"
+  },
   "dashboard": {
     "almostThere": "You're almost there!",
     "detailsSynced": "Details synced with your existing account",
