Add on-boarding page
Issue: PLCR1801-26

--- a/src/BusinessLogic/Language/Translations/en.json
+++ b/src/BusinessLogic/Language/Translations/en.json
@@ -57,6 +57,13 @@
     "IE": "Ireland",
     "GB": "Great Britain"
   },
+  "onBoardingWelcome": {
+    "header": "Let's set up basic information so that you can make shipments",
+    "steps": "It's just two steps that we need to go through to offer you the carrier that best suits your needs",
+    "stepOne": "Set parcel details",
+    "stepTwo": "Set sender's address",
+    "startSetUp": "Start set up"
+  },
   "dashboard": {
     "almostThere": "You're almost there!",
     "detailsSynced": "Details synced with your existing account",
