--- a/src/BusinessLogic/Language/Translations/en.json
+++ b/src/BusinessLogic/Language/Translations/en.json
@@ -65,18 +65,25 @@
     "startSetUp": "Start set up"
   },
   "onboardingOverview": {
-    "header": "Almost there! Please check that the information entered is correct, or complete it in order to continue.",
+    "header": "Almost there! Please check that the information entered is <br> correct, or complete it in order to continue.",
     "parcelDetails": "Parcel details",
     "senderAddress": "Sender's Address",
     "missingInfo": "Missing information",
-    "weight": "Weight",
-    "height": "Height",
-    "width": "Width",
-    "length": "Length",
     "complete": "Complete",
     "edit": "Edit",
     "continue": "Continue",
     "myShipmentServices": "My shipment services"
+  },
+  "defaultParcel": {
+    "weight": "Weight",
+    "height": "Height",
+    "width": "Width",
+    "length": "Length",
+    "save": "Save"
+  },
+  "onboardingParcel": {
+    "header": "Set parcel details",
+    "info": "We will use this default data for <strong>items that do not have defined <br> dimensions and weight.</strong> You can edit them whenever you like <br> via the settings tab."
   },
   "dashboard": {
     "almostThere": "You're almost there!",
