--- a/src/BusinessLogic/Language/Translations/en.json
+++ b/src/BusinessLogic/Language/Translations/en.json
@@ -25,6 +25,12 @@
     "chooseYourCountry": "Choose your country to start the registration process",
     "registerMe": "Register me"
   },
+  "validation": {
+    "requiredField": "This field is required.",
+    "invalidEmail": "This field must be valid email.",
+    "shortPassword": "The password must be at least %s characters long.",
+    "invalidPhone": "This field must be valid phone number."
+  },
   "register": {
     "logIn": "Log in",
     "email": "Email",
@@ -37,10 +43,6 @@
     "phone": "Phone number",
     "termsAndConditions": "I accept the <a href=\"%s\" target=\"_blank\">Terms of Service</a> and the <a href=\"%s\" target=\"_blank\">Privacy Policy</a> of Packlink",
     "marketingEmails": "I authorise Packlink Shipping S.L. to send me commercial communications by e-mail",
-    "requiredField": "This field is required.",
-    "invalidEmail": "This field must be valid email.",
-    "shortPassword": "The password must be at least 6 characters long.",
-    "invalidPhone": "This field must be valid phone number.",
     "submit": "Register",
     "chooseYourCountry": "Choose your country",
     "ES": "Spain",
