--- a/src/BusinessLogic/Language/Translations/it.json
+++ b/src/BusinessLogic/Language/Translations/it.json
@@ -25,6 +25,66 @@
     "logIn": "Accedi",
     "apiKeyIncorrect": "API Key non corretta"
   },
+  "validation": {
+    "requiredField": "Questo campo è obbligatorio.",
+    "invalidEmail": "Il campo deve essere un email valido.",
+    "shortPassword": "La password deve contenere almeno %s caratteri.",
+    "invalidPhone": "Questo campo deve contenere un numero di telefono valido."
+  },
+  "register": {
+    "logIn": "Log in",
+    "email": "Email",
+    "password": "Password",
+    "haveAccount": "Already have an account?",
+    "startEnjoying": "Inizia a usufruire di Packlink PRO!",
+    "registerAccount": "Registrati",
+    "getToKnowYou": "Vogliamo conoscerti meglio per adattarci a te e preparare una proposta personalizzata per te",
+    "monthlyShipmentVolume": "Quante spedizioni fai solitamente al mese?",
+    "phone": "Phone number",
+    "termsAndConditions": "Accetto i <a href=\"%s\" target=\"_blank\">Termini del servizio</a> e l’<a href=\"%s\" target=\"_blank\">Informativa sulla privacy</a> di Packlink",
+    "marketingEmails": "Autorizzo Packlink Shipping S.L. a inviarmi comunicazioni commerciali via email",
+    "submit": "Registrati",
+    "chooseYourCountry": "Choose your country",
+    "ES": "Spain",
+    "DE": "Germany",
+    "FR": "France",
+    "IT": "Italy",
+    "AT": "Austria",
+    "NL": "Netherlands",
+    "BE": "Belgium",
+    "PT": "Portugal",
+    "TR": "Turkey",
+    "IE": "Ireland",
+    "GB": "Great Britain"
+  },
+  "onboardingWelcome": {
+    "header": "Let's set up basic information so that you can make shipments",
+    "steps": "It's just two steps that we need to go through to offer you the carrier that best suits your needs",
+    "stepOne": "Set parcel details",
+    "stepTwo": "Set sender's address",
+    "startSetUp": "Start set up"
+  },
+  "onboardingOverview": {
+    "header": "Almost there! Please check that the information entered is <br> correct, or complete it in order to continue.",
+    "parcelDetails": "Parcel details",
+    "senderAddress": "Sender's Address",
+    "missingInfo": "Missing information",
+    "complete": "Complete",
+    "edit": "Edit",
+    "continue": "Continue",
+    "myShipmentServices": "My shipment services"
+  },
+  "defaultParcel": {
+    "weight": "Weight",
+    "height": "Height",
+    "width": "Width",
+    "length": "Length",
+    "save": "Save"
+  },
+  "onboardingParcel": {
+    "header": "Set parcel details",
+    "info": "We will use this default data for <strong>items that do not have defined <br> dimensions and weight.</strong> You can edit them whenever you like <br> via the settings tab."
+  },
   "dashboard": {
     "almostThere": "Ci sei quasi!",
     "detailsSynced": "Dati sincronizzati con il tuo account di Packlink PRO",
