--- a/src/BusinessLogic/Resources/lang/it.json
+++ b/src/BusinessLogic/Resources/lang/it.json
@@ -45,6 +45,12 @@
     "logIn": "Accedi",
     "apiKeyIncorrect": "API Key non corretta"
   },
+  "validation": {
+    "requiredField": "Questo campo è obbligatorio.",
+    "invalidEmail": "Il campo deve essere un email valido.",
+    "shortPassword": "La password deve contenere almeno %s caratteri.",
+    "invalidPhone": "Questo campo deve contenere un numero di telefono valido."
+  },
   "register": {
     "logIn": "Log in",
     "email": "Email",
