Fix review issues
Issue: PLCR1801-22

--- a/src/BusinessLogic/Language/Translations/de.json
+++ b/src/BusinessLogic/Language/Translations/de.json
@@ -45,6 +45,7 @@
     "marketingEmails": "Ich ermächtige Packlink Shipping S.L., mir kommerzielle Mitteilungen per E-Mail zuzusenden",
     "submit": "Registrieren",
     "chooseYourCountry": "Choose your country",
+    "searchCountry": "Busca el pais",
     "ES": "Spain",
     "DE": "Germany",
     "FR": "France",
