--- a/src/BusinessLogic/Language/Translations/en.json
+++ b/src/BusinessLogic/Language/Translations/en.json
@@ -45,6 +45,7 @@
     "marketingEmails": "I authorise Packlink Shipping S.L. to send me commercial communications by e-mail",
     "submit": "Register",
     "chooseYourCountry": "Choose your country",
+    "searchCountry": "Search country",
     "ES": "Spain",
     "DE": "Germany",
     "FR": "France",
