--- a/src/BusinessLogic/Language/Translations/es.json
+++ b/src/BusinessLogic/Language/Translations/es.json
@@ -45,6 +45,7 @@
     "marketingEmails": "Autorizo a Packlink Shipping S.L. a enviarme información comercial por correo electrónico",
     "submit": "Regístrate",
     "chooseYourCountry": "Choose your country",
+    "searchCountry": "Busca el pais",
     "ES": "Spain",
     "DE": "Germany",
     "FR": "France",
