--- a/src/BusinessLogic/Language/Translations/fr.json
+++ b/src/BusinessLogic/Language/Translations/fr.json
@@ -45,6 +45,7 @@
     "marketingEmails": "J’autorise Packlink Shipping S.L. à m’envoyer des communications commerciales par courriel",
     "submit": "S'inscrire",
     "chooseYourCountry": "Choose your country",
+    "searchCountry": "Busca el pais",
     "ES": "Spain",
     "DE": "Germany",
     "FR": "France",
