--- a/src/BusinessLogic/Language/Translations/it.json
+++ b/src/BusinessLogic/Language/Translations/it.json
@@ -45,6 +45,7 @@
     "marketingEmails": "Autorizzo Packlink Shipping S.L. a inviarmi comunicazioni commerciali via email",
     "submit": "Registrati",
     "chooseYourCountry": "Choose your country",
+    "searchCountry": "Busca el pais",
     "ES": "Spain",
     "DE": "Germany",
     "FR": "France",
