Update complete login & registration flow

--- a/src/BusinessLogic/Language/Translations/de.json
+++ b/src/BusinessLogic/Language/Translations/de.json
@@ -44,7 +44,7 @@
     "termsAndConditions": "Ich akzeptiere die <a href=\"%s\" target=\"_blank\">Nutzungsbedingungen</a> und die <a href=\"%s\" target=\"_blank\">Datenschutzerklärung</a> von Packlink",
     "marketingEmails": "Ich ermächtige Packlink Shipping S.L., mir kommerzielle Mitteilungen per E-Mail zuzusenden",
     "submit": "Registrieren",
-    "chooseYourCountry": "Choose your country",
+    "chooseYourCountry": "Elige tu país",
     "searchCountry": "Busca el pais",
     "ES": "Spain",
     "DE": "Germany",
