--- a/src/BusinessLogic/Language/Translations/es.json
+++ b/src/BusinessLogic/Language/Translations/es.json
@@ -33,29 +33,29 @@
   },
   "register": {
     "logIn": "Iniciar sesión",
-    "email": "Email",
+    "email": "Correo electrónico",
     "password": "Contraseña",
-    "haveAccount": "Already have an account?",
+    "haveAccount": "¿Ya tienes una cuenta?",
     "startEnjoying": "¡Empieza a disfrutar de Packlink PRO!",
     "registerAccount": "Registro",
     "getToKnowYou": "Queremos conocerte mejor para adaptarnos a ti y hacerte una propuesta personalizada.",
     "monthlyShipmentVolume": "¿Cuántos envíos sueles hacer al mes?",
-    "phone": "Phone number",
+    "phone": "Teléfono",
     "termsAndConditions": "Acepto los <a href=\"%s\" target=\"_blank\">Términos y condiciones</a> y la <a href=\"%s\" target=\"_blank\">Política de privacidad</a> de Packlink",
     "marketingEmails": "Autorizo a Packlink Shipping S.L. a enviarme información comercial por correo electrónico",
     "submit": "Regístrate",
-    "chooseYourCountry": "Choose your country",
-    "searchCountry": "Busca el pais",
-    "ES": "Spain",
-    "DE": "Germany",
-    "FR": "France",
-    "IT": "Italy",
+    "chooseYourCountry": "Elige tu país",
+    "searchCountry": "Busca el país",
+    "ES": "España",
+    "DE": "Alemania",
+    "FR": "Francia",
+    "IT": "Italia",
     "AT": "Austria",
     "NL": "Netherlands",
     "BE": "Belgium",
     "PT": "Portugal",
     "TR": "Turkey",
-    "IE": "Ireland",
+    "IE": "Irlanda",
     "GB": "Great Britain",
     "HU": "Hungary"
   },
