--- a/src/BusinessLogic/Language/Translations/en.json
+++ b/src/BusinessLogic/Language/Translations/en.json
@@ -13,7 +13,29 @@
     "help": "Help",
     "downloadSystemInfoFile": "Download system info file",
     "curlIsNotInstalled": "cURL is not installed or enabled in your PHP installation. This is required for background task to work. Please install it and then refresh this page.",
-    "loading": "Loading..."
+    "loading": "Loading...",
+    "save": "Save",
+    "saveChanges": "Save changes",
+    "cancel": "Cancel",
+    "continue": "Continue",
+    "complete": "Complete",
+    "edit": "Edit"
+  },
+  "validation": {
+    "requiredField": "This field is required.",
+    "invalidEmail": "This field must be valid email.",
+    "shortPassword": "The password must be at least %s characters long.",
+    "invalidPhone": "This field must be valid phone number.",
+    "numeric": "Value must be valid number.",
+    "greaterThanZero": "Value must be greater than 0.",
+    "nonNegative": "Field cannot have a negative value.",
+    "numberOfDecimalPlaces": "Field must have 2 decimal places.",
+    "integer": "Field must be an integer.",
+    "invalidCountryList": "You must select destination countries.",
+    "invalidLanguage": "Field is not a valid language.",
+    "invalidPlatformCountry": "Field is not a valid platform country.",
+    "invalidUrl": "Field must be a valid URL.",
+    "invalidFieldValue": "Field must be set to \"%s\"."
   },
   "login": {
     "apiKey": "Api key",
@@ -24,12 +46,6 @@
     "validateApiKey": "Validate API key",
     "chooseYourCountry": "Choose your country to start the registration process",
     "registerMe": "Register me"
-  },
-  "validation": {
-    "requiredField": "This field is required.",
-    "invalidEmail": "This field must be valid email.",
-    "shortPassword": "The password must be at least %s characters long.",
-    "invalidPhone": "This field must be valid phone number."
   },
   "register": {
     "logIn": "Log in",
@@ -46,6 +62,7 @@
     "submit": "Register",
     "chooseYourCountry": "Choose your country",
     "searchCountry": "Search country",
+    "invalidDeliveryVolume": "Field is not a valid delivery volume.",
     "ES": "Spain",
     "DE": "Germany",
     "FR": "France",
@@ -71,21 +88,17 @@
     "parcelDetails": "Parcel details",
     "senderAddress": "Sender's Address",
     "missingInfo": "Missing information",
-    "complete": "Complete",
-    "edit": "Edit",
-    "continue": "Continue",
     "myShipmentServices": "My shipment services"
   },
   "defaultParcel": {
+    "title-onboarding": "1. Set parcel details",
+    "description-onboarding": "We will use this default data for <strong>items that do not have defined dimensions and weight.</strong> You can edit them whenever you like via the settings tab.",
+    "title-config": "Default parcel",
+    "description-config": "We will use this data for <strong>items that do not have defined dimensions and weight.</strong>",
     "weight": "Weight",
     "height": "Height",
     "width": "Width",
-    "length": "Length",
-    "save": "Save"
-  },
-  "onboardingParcel": {
-    "header": "Set parcel details",
-    "info": "We will use this default data for <strong>items that do not have defined <br> dimensions and weight.</strong> You can edit them whenever you like <br> via the settings tab."
+    "length": "Length"
   },
   "dashboard": {
     "almostThere": "You're almost there!",
@@ -107,7 +120,6 @@
     "address": "Address",
     "phone": "Phone number",
     "email": "Email",
-    "saveChanges": "Save changes",
     "fieldRequired": "This field is required.",
     "fieldValidNumber": "Value must be valid number.",
     "fieldInvalid": "This field is not valid.",
@@ -116,19 +128,6 @@
     "fieldValidEmail": "Field must be valid email.",
     "postalCodeNotCorrect.": "Postal code is not correct.",
     "fieldValidPhone": "This field must be valid phone number."
-  },
-  "parcelSettings": {
-    "defaultParcel": "Default parcel",
-    "setDefaultParcel": "Set default parcel",
-    "defaultParcelInfo": "We will use the default parcel in case any item has not defined dimensions and weight. You can edit anytime.",
-    "weight": "Weight",
-    "width": "Width",
-    "length": "Length",
-    "height": "Height",
-    "valuePositive": "Value must be greater than 0.",
-    "saveChanges": "Save changes",
-    "weightMustBePositive": "Weight must be a positive decimal number.",
-    "fieldMustBePositive": "Field must be a positive integer."
   },
   "mapOrderStatuses": {
     "mapStatuses": "Map order statuses",
@@ -166,8 +165,6 @@
     "packlinkPrices": "Packlink prices",
     "percentagePacklinkPrices": "% of Packlink prices",
     "fixedPrices": "Fixed prices",
-    "save": "Save",
-    "cancel": "Cancel",
     "packlinkPercent": "Packlink percent",
     "configure": "Configure",
     "allShippingServices": "All shipping services",
