--- a/src/BusinessLogic/Language/Translations/es.json
+++ b/src/BusinessLogic/Language/Translations/es.json
@@ -13,7 +13,29 @@
     "help": "Ayuda",
     "downloadSystemInfoFile": "Descargar el archivo de información del sistema",
     "curlIsNotInstalled": "cURL no está instalado ni habilitado en tu instalación de PHP. Es necesario para que funcione la tarea en segundo plano. Por favor, instálalo y luego actualiza esta página.",
-    "loading": "Cargando..."
+    "loading": "Cargando...",
+    "save": "Guardar",
+    "saveChanges": "Guardar cambios",
+    "cancel": "Cancel",
+    "continue": "Continuar",
+    "complete": "Completar",
+    "edit": "Editar"
+  },
+  "validation": {
+    "requiredField": "Esta campo es obligatorio.",
+    "invalidEmail": "El campo debe ser un correo electrónico válido.",
+    "shortPassword": "La contraseña debe contener %s caracteres como mínimo.",
+    "invalidPhone": "Este campo deber ser un número de teléfono válido.",
+    "numeric": "Debe ser un valor numérico.",
+    "greaterThanZero": "El valor debe ser mayor que 0.",
+    "nonNegative": "Field cannot have a negative value.",
+    "numberOfDecimalPlaces": "El campo debe tener 2 decimales.",
+    "integer": "El campo debe ser un número entero.",
+    "invalidCountryList": "Debes seleccionar los países de destino.",
+    "invalidLanguage": "Field is not a valid language.",
+    "invalidPlatformCountry": "Field is not a valid platform country.",
+    "invalidUrl": "Field must be a valid URL.",
+    "invalidFieldValue": "Field must be set to \"%s\"."
   },
   "login": {
     "apiKey": "Api key",
@@ -24,12 +46,6 @@
     "validateApiKey": "Validar API key",
     "chooseYourCountry": "Elige tu país para comenzar el registro",
     "registerMe": "Registrarme"
-  },
-  "validation": {
-    "requiredField": "Esta campo es obligatorio.",
-    "invalidEmail": "El campo debe ser un correo electrónico válido.",
-    "shortPassword": "La contraseña debe contener %s caracteres como mínimo.",
-    "invalidPhone": "Este campo deber ser un número de teléfono válido."
   },
   "register": {
     "logIn": "Iniciar sesión",
@@ -71,21 +87,17 @@
     "parcelDetails": "Detalle del paquete",
     "senderAddress": "Dirección del remitente",
     "missingInfo": "Faltan datos",
-    "complete": "Completar",
-    "edit": "Editar",
-    "continue": "Continuar",
     "myShipmentServices": "My shipment services"
   },
   "defaultParcel": {
+    "title-onboarding": "1. Configurar los detalles del paquete",
+    "description-onboarding": "Utilizaremos estos datos predeterminados <strong>para los artículos que no tengan dimensiones y peso definidos.</strong> Podrás editarlos cuando quieras desde la pestaña de configuración.",
+    "title-config": "Paquete predeterminado",
+    "description-config": "Utilizaremos estos datos <strong>para los artículos que no tengan dimensiones y peso definidos.</strong>",
     "weight": "Peso",
     "height": "Alto",
     "width": "Ancho",
-    "length": "Largo",
-    "save": "Guardar"
-  },
-  "onboardingParcel": {
-    "header": "Configurar los detalles del paquete",
-    "info": "Utilizaremos estos datos predeterminados para <strong>los artículos <br> que no tengan dimensiones y peso definidos.</strong> Podrás editarlos <br> cuando quieras desde la pestaña de configuración."
+    "length": "Largo"
   },
   "dashboard": {
     "almostThere": "¡Ya casi está!",
@@ -107,11 +119,6 @@
     "address": "Dirección",
     "phone": "Teléfono",
     "email": "Email",
-    "saveChanges": "Guardar cambios",
-    "fieldRequired": "Esta campo es obligatorio.",
-    "fieldValidNumber": "Debe ser un valor numérico.",
-    "fieldInvalid": "Este campo no es válido.",
-    "fieldTwoDecimals": "El campo debe tener 2 decimales.",
     "fieldInteger": "El campo debe ser un número entero.",
     "fieldValidEmail": "El campo debe ser un correo electrónico válido.",
     "postalCodeNotCorrect.": "El código postal no es correcto.",
@@ -124,11 +131,7 @@
     "weight": "Peso",
     "width": "Anchura",
     "length": "Longitud",
-    "height": "Altura",
-    "valuePositive": "El valor debe ser mayor que 0.",
-    "saveChanges": "Guardar cambios",
-    "weightMustBePositive": "El peso debe ser un número decimal positivo.",
-    "fieldMustBePositive": "Este campo debe ser un número entero positivo."
+    "height": "Altura"
   },
   "mapOrderStatuses": {
     "mapStatuses": "Sincronización de estados",
@@ -166,8 +169,6 @@
     "packlinkPrices": "Precios de Packlink",
     "percentagePacklinkPrices": "% sobre los precios de Packlink",
     "fixedPrices": "Precios fijos",
-    "save": "Guardar",
-    "cancel": "Cancelar",
     "packlinkPercent": "Porcentaje de Packlink",
     "configure": "Configurar",
     "allShippingServices": "Todos los servicios de envío",
