Add default warehouse page
Issue: PLCR1801-31

--- a/src/BusinessLogic/Language/Translations/en.json
+++ b/src/BusinessLogic/Language/Translations/en.json
@@ -101,6 +101,29 @@
     "width": "Width",
     "length": "Length"
   },
+  "defaultWarehouse": {
+    "title-onboarding": "2. Set sender’s address",
+    "description-onboarding": "We will use this address to create <strong>a default sender for all shipments.</strong> You will be able to edit it whenever you wish via the settings tab.",
+    "title-config": "Default sender address",
+    "description-config": "We will use this address to create <strong>a default sender for all shipments.</strong> You can edit it at any time",
+    "alias": "Sender name",
+    "alias-placeholder": "Main warehouse",
+    "name": "Name of contact person",
+    "name-placeholder": "Name",
+    "surname": "Surname of contact person",
+    "surname-placeholder": "surname",
+    "company": "Company name",
+    "company-placeholder": "Company",
+    "country": "Country",
+    "postal_code": "City or postcode",
+    "postal_code-placeholder": "-",
+    "address": "Address",
+    "address-placeholder": "Address",
+    "phone": "Phone number",
+    "phone-placeholder": "123 456 7777",
+    "email": "Email",
+    "email-placeholder": "youremail@example.com"
+  },
   "dashboard": {
     "almostThere": "You're almost there!",
     "detailsSynced": "Details synced with your existing account",
@@ -108,27 +131,6 @@
     "setDefaultWarehouse": "Set default warehouse details",
     "justFewMoreSteps": "Just a few more steps to complete the setup",
     "selectShippingServices": "Select shipping services"
-  },
-  "warehouseSettings": {
-    "defaultWarehouse": "Default warehouse",
-    "setDefaultWarehouse": "Set default warehouse",
-    "defaultWarehouseAddress": "We will use the default Warehouse address as your sender address. You can edit anytime.",
-    "warehouseName": "Warehouse name",
-    "contactPersonName": "Contact person name",
-    "contactPersonSurname": "Contact person surname",
-    "companyName": "Company name",
-    "cityOrPostal": "City or postal code",
-    "address": "Address",
-    "phone": "Phone number",
-    "email": "Email",
-    "fieldRequired": "This field is required.",
-    "fieldValidNumber": "Value must be valid number.",
-    "fieldInvalid": "This field is not valid.",
-    "fieldTwoDecimals": "Field must have 2 decimal places.",
-    "fieldInteger": "Field must be an integer.",
-    "fieldValidEmail": "Field must be valid email.",
-    "postalCodeNotCorrect.": "Postal code is not correct.",
-    "fieldValidPhone": "This field must be valid phone number."
   },
   "mapOrderStatuses": {
     "mapStatuses": "Map order statuses",
