--- a/src/BusinessLogic/Language/Translations/es.json
+++ b/src/BusinessLogic/Language/Translations/es.json
@@ -100,39 +100,28 @@
     "width": "Ancho",
     "length": "Largo"
   },
-  "dashboard": {
-    "almostThere": "¡Ya casi está!",
-    "detailsSynced": "Datos sincronizados con tu cuenta Packlink PRO",
-    "setDefaultParcel": "Establece el paquete que más usas",
-    "setDefaultWarehouse": "Establece la dirección predefinida",
-    "justFewMoreSteps": "Te queda muy poco para completar la configuración",
-    "selectShippingServices": "Selecciona los servicios de envío"
-  },
-  "warehouseSettings": {
-    "defaultWarehouse": "Dirección predefinida",
-    "setDefaultWarehouse": "Establece la dirección predefinida",
-    "defaultWarehouseAddress": "Usaremos la dirección predefinida como la dirección del remitente. Puedes editarla en cualquier momento.",
-    "warehouseName": "Dirección predefinida",
-    "contactPersonName": "Nombre de la persona de contacto",
-    "contactPersonSurname": "Apellido de la persona de contacto",
-    "companyName": "Nombre de la empresa",
-    "cityOrPostal": "Ciudad o código postal",
+  "defaultWarehouse": {
+    "title-onboarding": "2. Configurar la dirección del remitente ",
+    "description-onboarding": "Utilizaremos esta dirección para crear un <strong>remitente por defecto que valga para todos los envíos.</strong> Podrás editarla cuando quieras desde la pestaña de configuración.",
+    "title-config": "Default sender address",
+    "description-config": "We will use this address to create <strong>a default sender for all shipments.</strong> You can edit it at any time",
+    "alias": "Nombre del almacén",
+    "alias-placeholder": "Almacen principal",
+    "name": "Nombre de la persona de contacto",
+    "name-placeholder": "Nombe de la persona",
+    "surname": "Apellido de la persona de contacto",
+    "surname-placeholder": "Apellido de la persona",
+    "company": "Nombre de la empresa",
+    "company-placeholder": "Empresa S.A.",
+    "country": "País",
+    "postal_code": "Ciudad o código postal",
+    "postal_code-placeholder": "-",
     "address": "Dirección",
-    "phone": "Teléfono",
-    "email": "Email",
-    "fieldInteger": "El campo debe ser un número entero.",
-    "fieldValidEmail": "El campo debe ser un correo electrónico válido.",
-    "postalCodeNotCorrect.": "El código postal no es correcto.",
-    "fieldValidPhone": "Este campo deber ser un número de teléfono válido."
-  },
-  "parcelSettings": {
-    "defaultParcel": "Paquete predefinido",
-    "setDefaultParcel": "Establece el paquete que más usas",
-    "defaultParcelInfo": "Usaremos el paquete que has definido como el más usado en el caso de que algún artículo no tenga las dimensiones y el peso definidas. Puedes editar esta información en cualquier momento.",
-    "weight": "Peso",
-    "width": "Anchura",
-    "length": "Longitud",
-    "height": "Altura"
+    "address-placeholder": "Dirección",
+    "phone": "Número de teléfono",
+    "phone-placeholder": "123 456 7777",
+    "email": "Correo electrónico",
+    "email-placeholder": "tucorreo@example.com"
   },
   "mapOrderStatuses": {
     "mapStatuses": "Sincronización de estados",
