--- a/src/BusinessLogic/Language/Translations/en.json
+++ b/src/BusinessLogic/Language/Translations/en.json
@@ -105,7 +105,7 @@
     "title-onboarding": "2. Set sender’s address",
     "description-onboarding": "We will use this address to create <strong>a default sender for all shipments.</strong> You will be able to edit it whenever you wish via the settings tab.",
     "title-config": "Default sender address",
-    "description-config": "We will use this address to create <strong>a default sender for all shipments.</strong> You can edit it at any time",
+    "description-config": "We will use this address to create <strong>a default sender for all shipments.</strong> You can edit it at any time.",
     "alias": "Sender name",
     "alias-placeholder": "Main warehouse",
     "name": "Name of contact person",
