Add translations for configuration page
Issue: PLCR1801-33

--- a/src/BusinessLogic/Resources/lang/en.json
+++ b/src/BusinessLogic/Resources/lang/en.json
@@ -131,7 +131,7 @@
     "warehouse": "Default sender address",
     "parcel": "Default parcel",
     "help": "Help",
-    "contactUs": "Contact us at",
+    "contactUs": "Contact us at:",
     "systemInfo": "System information"
   },
   "mapOrderStatuses": {
